Fix background on iOS intento 3

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,7 @@
+html, body {
+  height: initial;
+}
+
 body {
 	font-family: 'Lato', sans-serif;
 }
